--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
           </li>
           <li>
             <img src="project/icon-phone.svg" alt="" />
-            <a href="tel:+15431234567">+1-543-123-4567</a>
+            <a href="tel:+2349066878348">+2349066878348</a>
           </li>
           <li>
             <img src="project/icon-email.svg" alt="" />
-            <a href="mailto:example@huddle.com">example@huddle.com</a>
+            <a href="mailto:chidinmapriscaz@huddle.com">chidinmapriscaz@huddle.com</a>
           </li>
         </ul>
       </div>
@@ -126,4 +126,5 @@
     </div>
   </footer>
 </body>
+
 </html>
